--- a/css/main.css
+++ b/css/main.css
@@ -695,28 +695,14 @@ body {
       -webkit-flex-direction: column;
       -ms-flex-direction: column;
       flex-direction: column;
-      -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-      justify-content: space-between;
+      -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
       -webkit-align-items: center;
       -ms-flex-align: center;
       align-items: center; }
       #products-1 .products-other-container .products-other-text {
-        width: 100%;
-        height: 20%;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center; }
-        #products-1 .products-other-container .products-other-text p {
-          -webkit-transform: rotate(-90deg);
-          -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg); }
+        display: none; }
       #products-1 .products-other-container .arrow-black-container {
         width: 100%;
         height: 5%;
@@ -832,28 +818,14 @@ body {
       -webkit-flex-direction: column;
       -ms-flex-direction: column;
       flex-direction: column;
-      -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-      justify-content: space-between;
+      -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
       -webkit-align-items: center;
       -ms-flex-align: center;
       align-items: center; }
       #products-2 .products-other-container .products-other-text {
-        width: 100%;
-        height: 20%;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center; }
-        #products-2 .products-other-container .products-other-text p {
-          -webkit-transform: rotate(-90deg);
-          -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg); }
+        display: none; }
       #products-2 .products-other-container .arrow-black-container {
         width: 100%;
         height: 5%;
@@ -872,7 +844,8 @@ body {
           transform: rotate(90deg);
           width: 100%;
           height: 20%;
-          content: " "; }
+          content: " ";
+          margin-bottom: 16px; }
   /* ---- CONTACT ---- */
   #contact-background {
     height: 100vh;
@@ -987,9 +960,10 @@ body {
       -ms-flex-align: end;
       align-items: flex-end; }
       #home-background .arrow-container .arrow {
-        width: 2%;
+        width: 3%;
         height: 20%;
-        content: " "; }
+        content: " ";
+        margin: 40px 20px; }
   /* ---- ABOUT ---- */
   #about-background {
     height: 100vh;
@@ -1028,9 +1002,10 @@ body {
       -ms-flex-align: end;
       align-items: flex-end; }
       #about-background .arrow-container .arrow {
-        width: 2%;
+        width: 3%;
         height: 20%;
-        content: " "; }
+        content: " ";
+        margin: 40px 20px; }
   /* ---- PRODUCTS ---- */
   #products-1 {
     height: 100vh;
@@ -1097,11 +1072,23 @@ body {
         justify-content: center;
         -webkit-align-items: center;
         -ms-flex-align: center;
-        align-items: center; }
+        align-items: center;
+        position: relative; }
         #products-1 .products-other-container .products-other-text p {
           -webkit-transform: rotate(-90deg);
           -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg); }
+          transform: rotate(-90deg);
+          position: absolute; }
+          #products-1 .products-other-container .products-other-text p:nth-child(1) {
+            top: 147px; }
+          #products-1 .products-other-container .products-other-text p:nth-child(2) {
+            top: 114px; }
+          #products-1 .products-other-container .products-other-text p:nth-child(3) {
+            top: 84px; }
+          #products-1 .products-other-container .products-other-text p:nth-child(4) {
+            top: 39px; }
+          #products-1 .products-other-container .products-other-text p:nth-child(5) {
+            top: 2px; }
       #products-1 .products-other-container .arrow-black-container {
         width: 100%;
         height: 5%;
@@ -1147,7 +1134,7 @@ body {
         align-items: center; }
         #products-2 #products-second-page #background-denso #products-denso {
           width: 90%;
-          height: 10%; }
+          height: 8%; }
       #products-2 #products-second-page #background-bosch {
         width: 20%;
         height: 100%;
@@ -1162,7 +1149,7 @@ body {
         align-items: center; }
         #products-2 #products-second-page #background-bosch #products-bosch {
           width: 90%;
-          height: 10%; }
+          height: 9%; }
       #products-2 #products-second-page #background-continental {
         width: 20%;
         height: 100%;
@@ -1177,7 +1164,7 @@ body {
         align-items: center; }
         #products-2 #products-second-page #background-continental #products-continental {
           width: 90%;
-          height: 10%; }
+          height: 8%; }
       #products-2 #products-second-page #background-delphi {
         width: 20%;
         height: 100%;
@@ -1192,7 +1179,7 @@ body {
         align-items: center; }
         #products-2 #products-second-page #background-delphi #products-delphi {
           width: 90%;
-          height: 10%; }
+          height: 13%; }
       #products-2 #products-second-page #background-siemens {
         width: 20%;
         height: 100%;
@@ -1207,7 +1194,7 @@ body {
         align-items: center; }
         #products-2 #products-second-page #background-siemens #products-siemens {
           width: 90%;
-          height: 10%; }
+          height: 9%; }
     #products-2 .products-other-container {
       height: 100%;
       width: 2%;
@@ -1234,11 +1221,20 @@ body {
         justify-content: center;
         -webkit-align-items: center;
         -ms-flex-align: center;
-        align-items: center; }
+        align-items: center;
+        position: relative; }
         #products-2 .products-other-container .products-other-text p {
           -webkit-transform: rotate(-90deg);
           -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg); }
+          transform: rotate(-90deg);
+          text-align: justify;
+          position: absolute; }
+          #products-2 .products-other-container .products-other-text p:nth-child(1) {
+            top: 84px; }
+          #products-2 .products-other-container .products-other-text p:nth-child(2) {
+            top: 49px; }
+          #products-2 .products-other-container .products-other-text p:nth-child(3) {
+            top: 11px; }
       #products-2 .products-other-container .arrow-black-container {
         width: 100%;
         height: 5%;
@@ -1318,10 +1314,10 @@ body {
         height: 40%; }
         #contact-background #footer #contact-container #contact-logo {
           height: 100%;
-          width: 20%; }
+          width: 14%; }
         #contact-background #footer #contact-container #studio-18 {
-          height: 80%;
-          width: 10%;
+          height: 88%;
+          width: 7%;
           content: ' ';
           cursor: pointer;
           position: relative; }
@@ -1371,15 +1367,17 @@ body {
       width: 24px;
       height: 22px;
       border: 1px solid white;
-      margin: 2px;
+      margin-left: 6px;
       text-align: left;
       text-decoration: none;
       background: transparent;
       color: white;
       cursor: pointer; }
+      .nav-panel .lang button p {
+        margin-top: 2px; }
   .nav-panel .nav-list {
     height: 50%;
-    width: 24%; }
+    width: 26%; }
     .nav-panel .nav-list a {
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -1392,10 +1390,12 @@ body {
       align-items: center;
       text-decoration: none;
       cursor: pointer;
-      color: white; }
+      color: white;
+      padding-bottom: 2px; }
       .nav-panel .nav-list a .line {
         width: 20%;
         height: 2px;
+        margin-left: 4px;
         content: " ";
         background-color: white; }
       .nav-panel .nav-list a:hover {
@@ -1424,7 +1424,5 @@ body {
       height: 2px;
       content: " ";
       background-color: white; }
-
-/* ---- NAV ---- */
 
 /*# sourceMappingURL=main.css.map */
